--- a/openai_api/models.ipynb
+++ b/openai_api/models.ipynb
@@ -13,7 +13,9 @@
   {
    "cell_type": "markdown",
    "id": "7466990e-c2ac-441c-a545-fdc122e752ca",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## List Models\n",
     "\n",
@@ -26,11 +28,14 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "f453ab0c-b262-4fa5-993e-b4b341e46a94",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import os\n",
     "import openai\n",
+    "os.environ['OPENAI_API_KEY'] = \"1234\"\n",
     "openai.api_key = os.getenv(\"OPENAI_API_KEY\")\n",
     "models = openai.Model.list()"
    ]
@@ -40,11 +45,8 @@
    "execution_count": 2,
    "id": "87dbc132-41cd-4ebc-928f-9edf6a4befcd",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
-    "scrolled": true
+    "scrolled": true,
+    "tags": []
    },
    "outputs": [
     {
@@ -2952,9 +2954,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "jupiter",
    "language": "python",
-   "name": "python3"
+   "name": "jupiter"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2966,8 +2968,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
-  }
+   "version": "3.10.12"
+  },
+  "toc-autonumbering": true,
+  "toc-showmarkdowntxt": false,
+  "toc-showtags": false
  },
  "nbformat": 4,
  "nbformat_minor": 5
